Added css. Added homepage view in previous

--- a/sbs/sbs_server_side/home/templates/home_page.html
+++ b/sbs/sbs_server_side/home/templates/home_page.html
@@ -18,7 +18,7 @@
 <body style="background-color: snow ;">
 <nav class="navbar navbar-default navbar-expand-lg navbar-light">
 	<div class="navbar-header d-flex col">
-		<img src="logo2.jpeg " style="width: 25%; padding: 12px;">  		
+		<img src="{% static 'logo2.jpeg' %}" style="width: 25%; padding: 12px;">  		
 		<button type="button" data-target="#navbarCollapse" data-toggle="collapse" class="navbar-toggle navbar-toggler ml-auto">
 			<span class="navbar-toggler-icon"></span>
 			<span class="icon-bar"></span>
