--- a/sbs/sbs_server_side/home/templates/home_page.html
+++ b/sbs/sbs_server_side/home/templates/home_page.html
@@ -16,9 +16,10 @@
 <script src="home.js"></script>
 </head> 
 <body style="background-color: snow ;">
+	<img src="{% static 'logo2.jpeg' %}" style="width: 25%; padding: 12px;">
 <nav class="navbar navbar-default navbar-expand-lg navbar-light">
 	<div class="navbar-header d-flex col">
-		<img src="{% static 'logo2.jpeg' %}" style="width: 25%; padding: 12px;">  		
+		  		
 		<button type="button" data-target="#navbarCollapse" data-toggle="collapse" class="navbar-toggle navbar-toggler ml-auto">
 			<span class="navbar-toggler-icon"></span>
 			<span class="icon-bar"></span>
@@ -27,8 +28,8 @@
 		</button>
 	</div>
 	<!-- Collection of nav links, forms, and other content for toggling -->
-	<div id="navbarCollapse" class="collapse navbar-collapse justify-content-start">
-		<ul class="nav navbar-nav">
+	<div id="navbarCollapse" class="collapse navbar-collapse">
+		<ul class="nav navbar-nav navbar-left ml-auto">
 			<li class="nav-item"><a href="#" class="nav-link">Home</a></li>			
 			<li class="nav-item dropdown">
 				<a data-toggle="dropdown" class="nav-link dropdown-toggle" href="#">Menu<b class="caret"></b></a>
@@ -40,23 +41,23 @@
 				</ul>
 			</li>
 			<li class="nav-item "><a href="#" class="nav-link">Contact</a></li>
-			<li class="nav-item"><a href="#" class="nav-link"><input type="date" id="datepicker" style="width:150px;">Calendar</a></li>
 			
 		</ul>		
 		<ul class="nav navbar-nav navbar-right ml-auto">			
-			<li class="nav-item dropdown">
+			<li type="button" class="nav-item dropdown" data-toggle="tooltip" data-placement="bottom" title="Search">
 				<a data-toggle="dropdown" class="nav-link dropdown-toggle" href="#"><i class="fa fa-search"></i></a>
 				<a data-toggle="dropdown" class="nav-link dropdown-toggle hide" href="#"><i class="fa fa-close"></i></a>
 				<ul class="dropdown-menu">
 					<li>
-                        <form>
+                        <form  action = "{% url 'home:homePage'%}" method = "post">
                             <div class="input-group search-box">
-								<form>								
-								<input type="number" id="search" class="form-control" placeholder="Search by room number" ><p style="text-align: center;">Or<br>Search by time slot</p>
-								<input type="time" id="search" class="form-control" placeholder="to" ><input type="time" id="search" class="form-control" placeholder="from" >
+								<form>
+								<input type="date" id="datepicker" class="form-control">								
+								<p style="text-align:center;">Search by Room number</p><input type="text" id="search" class="form-control" placeholder="Search by room number" name = "room"><p style="text-align: center;">Or<br>Search by time slot</p>
+								From:<input type="time" id="timeFrom" class="form-control" placeholder="_from" name = "to">To:<input type="time" id="timeTo" class="form-control" placeholder="from" name = "to">
 								</form>
 								<span class="input-group-btn">
-									<button type="button" class="btn btn-primary"><i class="fa fa-search"></i></button>
+									<button type="submit" class="btn btn-primary"><i class="fa fa-search"></i></button>
 								</span>
                             </div>
                         </form>                        
@@ -69,7 +70,25 @@
 		</ul>
   </div>
 </nav>
+<script>
+	$(document).ready(function(){
+    var dropdown = $(".navbar-right .dropdown");
+    var toogleBtn = $(".navbar-right .dropdown-toggle");
+    
+    // Toggle search and close icon for search dropdown
+    dropdown.on("show.bs.dropdown", function(e){
+        toogleBtn.toggleClass("hide");
+    });
+    dropdown.on("hide.bs.dropdown", function(e){
+        toogleBtn.addClass("hide");
+        toogleBtn.first().removeClass("hide");
+    });
+});
+</script>
 <div class="table-responsive">
+	
+	<p> Hello {{request.user.username}} </p>
+
   	<h2>Available Rooms</h2>
 
 	{% if empty_slots %}
@@ -92,6 +111,7 @@
 								<button type="button" class="btn" data-toggle="modal" data-target="#myModal">
 									{{ entries.0 }} - {{ entries.1 }}
 								</button> 
+								<br>
 							
 					        {% endfor %}
                         </td>	
@@ -116,18 +136,43 @@
 		  <h4 class="modal-title">Send Request</h4>
 		</div>
 		<div class="modal-body">
-		  <input type="time" id="time" class="form-control" placeholder="to and from">and<input type="time" id="from" class="form-control" placeholder="time:from"> 
-		  <input type="search"  id="school" class="form-control" placeholder="School">
-		  <input type="number" id="room" class="form-control" placeholder="Room number">
-		  <input type="text" id="description" class="form-control" placeholder="Event details"> 
+			Time-slot<br>From:<input type="time" id="timeFrom" class="form-control">To:<input type="time" id="timeTo" class="form-control" valueAsTime="23:59"> 
+			<script>time_to=document.getElementById("timeTo").defaultValue="23:59";</script>
+			School:<input type="search"  id="school" class="form-control" placeholder="School">
+			Room Number:<input type="number" id="room" class="form-control" placeholder="Room number">
+			Event details:<input type="text" id="description" class="form-control" placeholder="Event details">  
 		</div>
 		<div class="modal-footer">
-		  <button type="submit" class="btn btn-default" data-dismiss="modal">Submit</button>
-		  <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+			<button type="button" class="submit" data-placement="submit">Submit</button>
 		</div>
 	  </div>
   
 	</div>
   </div>
+  <script>
+	var modal = document.getElementById("myModal");
+	var btn = document.getElementById("myBtn1");
+	var timeto = document.getElementById("to");
+	var timefrom = document.getElementById("from");
+	var school = document.getElementById("school");
+	var roomno = document.getElementById("room");
+	var description = document.getElementById("description");
+	var button = document.getElementsByClassName("submit");
+	btn.onclick = function() {
+		modal.style.display = "block";
+	  }
+	  
+	  // When the user clicks on <span> (x), close the modal
+	  button.onclick = function() {
+		modal.style.display = "none";
+	  }
+	  
+	  // When the user clicks anywhere outside of the modal, close it
+	  window.onclick = function(event) {
+		if (event.target == modal) {
+		  modal.style.display = "none";
+		}
+	  }
+	</script>
 </body>
 </html>                                                        
