added req functionality(may have bugs)

--- a/sbs/sbs_server_side/home/templates/home_page.html
+++ b/sbs/sbs_server_side/home/templates/home_page.html
@@ -35,8 +35,10 @@
 				<a data-toggle="dropdown" class="nav-link dropdown-toggle" href="#">Menu<b class="caret"></b></a>
 				<ul class="dropdown-menu">					
 					<li><a href="#" class="dropdown-item">Upcoming Events</a></li>
+					{% if request.user.is_staff %}
 					<li><a href="#" class="dropdown-item">Send Requests</a></li>
-					<li><a href="#" class="dropdown-item">Pending Requests</a></li>
+					<li><a href="{% url 'req:viewRequests' %}" class="dropdown-item">Pending Requests</a></li>
+					{% endif %}
 					<li><a href="#" class="dropdown-item">Available Time-slots</a></li>
 				</ul>
 			</li>
@@ -49,7 +51,7 @@
 				<a data-toggle="dropdown" class="nav-link dropdown-toggle hide" href="#"><i class="fa fa-close"></i></a>
 				<ul class="dropdown-menu">
 					<li>
-                        <form  action = "{% url 'home:homePage'%}" method = "post">
+                        <form  action = "{% url 'home:homePage' 0 %}" method = "post">
                             <div class="input-group search-box">
 								<form>
 									<input type="date" id="datepicker" class="form-control">								
@@ -88,28 +90,26 @@
     });
 });
 </script>
-<div class="table-responsive">
+<div class="table-responsive" style="background-color: lavenderblush;">
 	
 	<p> Hello {{request.user.username}} </p>
 
   	<h2>Available Rooms</h2>
 
 	{% if empty_slots %}
-		<table id="customers">
+		<table id="customers" style="width:auto; min-width: 50%;">
 				<tr>
 					<th>Room No.</th>
-					<th>Time Slot</th>
+					<td style="background-color: #4CAF50; color: white;">Time Slot</td>
 				</tr>
 
 				{% for room_no, rec in empty_slots.items %}
 
 					<tr >
 						<td rowspan = "{rec|length}"> {{ room_no }} </td> <!--  Room no.  --> 
-
-					
 					    <td>
 					        {% for entries in rec %}
-
+							
 								<!--  time slot  -->
 								<button type="button" class="btn" data-toggle="modal" data-target="#myModal">
 									{{ entries.0 }} - {{ entries.1 }}
@@ -129,25 +129,38 @@
 	{% endif %}
 
 </div>
-<div id="myModal" class="modal fade" role="dialog">
+<div id="myModal" class="modal fade" role="dialog" style="background-color:lavendarblush; width: 50%; margin-left: auto; margin-right: auto;">
 	<div class="modal-dialog">
   
-	  <!-- Modal content-->
+	  <!-- Modal content -->
 	  <div class="modal-content">
 		<div class="modal-header">
 		  <button type="button" class="close" data-dismiss="modal">&times;</button>
 		  <h4 class="modal-title">Send Request</h4>
 		</div>
-		<div class="modal-body">
-			Time-slot<br>From:<input type="time" id="timeFrom" class="form-control">To:<input type="time" id="timeTo" class="form-control" valueAsTime="23:59"> 
-			<script>time_to=document.getElementById("timeTo").defaultValue="23:59";</script>
-			School:<input type="search"  id="school" class="form-control" placeholder="School">
-			Room Number:<input type="number" id="room" class="form-control" placeholder="Room number">
-			Event details:<input type="text" id="description" class="form-control" placeholder="Event details">  
-		</div>
-		<div class="modal-footer">
-			<button type="button" class="submit" data-placement="submit">Submit</button>
-		</div>
+		<form action = "{% url 'req:makeRequest' %}" method = "post">
+			<div class="modal-body">
+				Date<input type="date" id="dateSelcted" class="form-control">
+				<script>
+					datechosen=document.getElementById("dateSelected").defaultValue="26-06-2020";
+				</script>
+				Time-slot<br>
+				From:<input type="time" id="time_from" class="form-control" name = "from" required>
+				<script>
+					time1from=document.getElementById("time_from").defaultValue="08:00";
+				</script>
+				To:<input type="time" id="time_to" class="form-control" name = "to" required> 
+				<script>
+					time1to=document.getElementById("time_to").defaultValue="11:00";
+				</script>
+				Event:<input type="text"  id="school" class="form-control" placeholder="School" name="event" required>
+				Room Number:<input type="text" id="room" class="form-control" placeholder="Room number" name = "room" required>
+				Event details:<input type="text" id="description" class="form-control" placeholder="Event details" name = "details" required>	
+			</div>
+			<div class="modal-footer">
+				<button type="submit" class="submit" data-placement="submit">Submit</button>
+			</div>
+		</form>
 	  </div>
   
 	</div>
@@ -155,8 +168,9 @@
   <script>
 	var modal = document.getElementById("myModal");
 	var btn = document.getElementById("myBtn1");
-	var timeto = document.getElementById("to");
-	var timefrom = document.getElementById("from");
+	var timeto = document.getElementById("time_to");
+	var timefrom = document.getElementById("time_from");
+	var date_picked = document.getElementById("dateSelected");
 	var school = document.getElementById("school");
 	var roomno = document.getElementById("room");
 	var description = document.getElementById("description");
