--- a/sbs/sbs_server_side/req/templates/pendingrequest.html
+++ b/sbs/sbs_server_side/req/templates/pendingrequest.html
@@ -65,7 +65,7 @@
 					</li>
 				</ul>
 			</li>
-			<li type="button" class="nav-item" data-toggle="tooltip" data-placement="bottom" title="Logout"><a href="#" class="nav-link"><i class="fa fa-sign-out"></i></a></li>
+			<li type="button" class="nav-item" data-toggle="tooltip" data-placement="bottom" title="Logout"><a href="{% url 'db:user_logout' %}" class="nav-link"><i class="fa fa-sign-out"></i></a></li>
 			
 		</ul>
   </div>
