--- a/sbs/sbs_server_side/req/templates/pendingrequest.html
+++ b/sbs/sbs_server_side/req/templates/pendingrequest.html
@@ -35,31 +35,27 @@
 				<a data-toggle="dropdown" class="nav-link dropdown-toggle" href="#">Menu<b class="caret"></b></a>
 				<ul class="dropdown-menu">
 					<li><a href="#" class="dropdown-item">Pending Requests</a></li>
-					<li><a href="home.html" class="dropdown-item">Available Time-slots</a></li><!--href=home_page.html or whatever the name of the home page html file is-->
+					<li><a href="{% url 'home:homePage' 0 %}" class="dropdown-item">Available Time-slots</a></li><!--href=home_page.html or whatever the name of the home page html file is-->
 				</ul>
 			</li>
 			<li class="nav-item "><a href="#" class="nav-link">Contact</a></li>
 		</ul>
-		
-
-			
-					
+				
 		<ul class="nav navbar-nav navbar-right ml-auto">
 			<li type="button" class="nav-item dropdown" data-toggle="tooltip" data-placement="bottom" title="Search">
 				<a data-toggle="dropdown" class="nav-link dropdown-toggle" href="#"><i class="fa fa-search"></i></a>
 				<a data-toggle="dropdown" class="nav-link dropdown-toggle hide" href="#"><i class="fa fa-close"></i></a>
 				<ul class="dropdown-menu">
 					<li>
-                        <form>
+                        <form action = "{% url 'req:viewRequests' %}" method ="post" >
+                        {% csrf_token %}
                             <div class="input-group search-box">
-								<form>
-								 <input type="date" id="datepicker" class="form-control">							
-								<p style="text-align:center;">Search by Room number</p><input type="number" id="roomNumber" class="form-control" placeholder="Room number" ><p style="text-align: center;">Or<br>Search by time slot</p>
-								To:<input type="time" id="timeTo" class="form-control" placeholder="to" ><input type="time" id="timeFrom" class="form-control" placeholder="from" >
-								</form>
-								<span class="input-group-btn">
-									<button type="button" class="btn btn-primary"><i class="fa fa-search"></i></button>
-								</span>
+								
+                                    <input type="date" id="datepicker" class="form-control" name = "date">							
+                                    
+                                    <span class="input-group-btn">
+                                        <button type="submit" class="btn btn-primary"><i class="fa fa-search"></i></button>
+								    </span>
                             </div>
                         </form>                        
 					</li>
@@ -88,18 +84,37 @@
 <div style="background-color: lavenderblush" class="table-responsive">
     <h2>Pending Request</h2>
     <table id="customers" style="width:auto; min-width: 50%;">
+    <tr>
+        <th>Room No.</th>
+        <td style="background-color: #4CAF50; color: white;">Time Slot</td>
+    </tr>
+
+    <form id = "req_decision" method = "post" action = "{% url 'req:requestAction' %}">
+    {% csrf_token %}
+    <input type = "hidden" name = "date" value = "{{date}}">
 
         {% for room,data in pendingReq.items %}
             {% for clash_block in data %}
-                <td rowspan = "{{clash_block|length}}"> {{ room }} </td>
-                <td><button> {{clash_block.0.from_ts}} - {{clash_block.0.to_ts}} </button></td>
-
+            <tr>
+                <td rowspan = "{{clash_block|length }}+1"> {{ room }} </td>
+                <td>
+                    {{clash_block.0.from_ts}} - {{clash_block.0.to_ts}}
+                    <input type="hidden" name="id" value="{{ clash_block.0.id }}">
+                    <input type="submit" value="reject" name="status">
+                    <input type="submit" value="accept" name="status">  
+                </td>
+            </tr>   
                 {% if clash_block|length > 1 %}
                     {% for req in clash_block %}
-                        {% if forloop.counter != 0 %}
+                        {% if req is not clash_block.0 %}
 
                             <tr>
-                                <td><button> {{req.from_ts}} - {{req.to_ts}} </button></td>
+                                <td>
+                                    {{req.from_ts}} - {{req.to_ts}}
+                                    <input type="submit" value="reject" name="status">
+                                    <input type="submit" value="accept" name="status">
+                                    <input type="hidden" name="id" value={{ req.id }}>
+                                </td>
                             </tr>
 
                         {% endif %}
@@ -107,7 +122,7 @@
                 {% endif %}
             {% endfor %}
         {% endfor %}
-
+    </form>
     </table>
 </div>
 <div id="myModal" class="modal" style="background-color:lavenderblush; width: 50%; margin-left: auto; margin-right: auto;">
