--- a/sbs/sbs_server_side/req/templates/pendingrequest.html
+++ b/sbs/sbs_server_side/req/templates/pendingrequest.html
@@ -51,7 +51,7 @@
                         {% csrf_token %}
                             <div class="input-group search-box">
 								
-                                    <input type="date" id="datepicker" class="form-control" name = "date">							
+                                    <input type="date" id="datepicker" class="form-control" name = "date" value = "{{dateCal}}">							
                                     
                                     <span class="input-group-btn">
                                         <button type="submit" class="btn btn-primary"><i class="fa fa-search"></i></button>
