--- a/sbs/sbs_server_side/req/templates/pendingrequest.html
+++ b/sbs/sbs_server_side/req/templates/pendingrequest.html
@@ -89,19 +89,27 @@
         <td style="background-color: #4CAF50; color: white;">Time Slot</td>
     </tr>
 
-    <form id = "req_decision" method = "post" action = "{% url 'req:requestAction' %}">
+    
     {% csrf_token %}
     <input type = "hidden" name = "date" value = "{{date}}">
 
         {% for room,data in pendingReq.items %}
             {% for clash_block in data %}
             <tr>
-                <td rowspan = "{{clash_block|length }}+1"> {{ room }} </td>
+                <td rowspan = "{{ clash_block|length }}"> {{ room }} </td>
                 <td>
+                    <button data-toggle="popover" data-container="body" data-placement="right" type="button" data-html="true" href="#"  id="{{clash_block.0.id}}">
                     {{clash_block.0.from_ts}} - {{clash_block.0.to_ts}}
-                    <input type="hidden" name="id" value="{{ clash_block.0.id }}">
-                    <input type="submit" value="reject" name="status">
-                    <input type="submit" value="accept" name="status">  
+                    </button>
+                    <div id = "popover{{clash_block.0.id}}" class = "hide">
+                        <p>Details:{{clash_block.0.details}}</p>
+                        <p>Requested by:{{clash_block.0.requested_by}}</p>
+                        <form method = "post" action = "{% url 'req:requestAction' %}">
+                            <input type="submit" value="reject" name="status">
+                            <input type="submit" value="accept" name="status">
+                            <input type="hidden" name="id" value={{ clash_block.0.id }}>
+                        </form>
+                    </div>
                 </td>
             </tr>   
                 {% if clash_block|length > 1 %}
@@ -110,10 +118,23 @@
 
                             <tr>
                                 <td>
-                                    {{req.from_ts}} - {{req.to_ts}}
-                                    <input type="submit" value="reject" name="status">
-                                    <input type="submit" value="accept" name="status">
-                                    <input type="hidden" name="id" value={{ req.id }}>
+                                    <button data-toggle="popover" data-container="body" data-placement="right" type="button" data-html="true" href="#"  id="{{req.id}}">
+                                        {{req.from_ts}} - {{req.to_ts}}
+                                    </button>
+
+                                    <div id = "popover{{req.id}}" class = "hide">
+                                        <p>Details:{{ req.details }}</p>
+                                        <p>Requested by:{{ req.requested_by }}</p>
+                                        <form method = "post" action = "{% url 'req:requestAction' %}">
+                                            <input type="submit" value="reject" name="status">
+                                            <input type="submit" value="accept" name="status">
+                                            <input type="hidden" name="id" value={{ req.id }}>
+                                        </form>
+                                    </div>
+                                    
+                        </form>
+                    </div>
+                                    
                                 </td>
                             </tr>
 
@@ -122,50 +143,23 @@
                 {% endif %}
             {% endfor %}
         {% endfor %}
-    </form>
     </table>
 </div>
-<div id="myModal" class="modal" style="background-color:lavenderblush; width: 50%; margin-left: auto; margin-right: auto;">
-  
-    <!-- Modal content-->
-    <div class="modal-content">
-      <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal">&times;</button>
-        <p class="modal-title">Pending Request</p>
-      </div>
-      <div class="modal-body">
-          <p style="text-align: left;">
-              Requested by: Yashraj Kakkad<br>
-              Event: Ardino Workshop<br>
-              Description: The Programming club would like to arrange am ardino workshop for all beginners and the workshop will be sponspored by the Pclub of IIT Mumbai.
-          </p>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-outline-success">Accept</button>
-        <button type="button" class="btn btn-outline-danger">Decline</button>
-      </div>
-    </div>
+	
+    
 
-</div>
-<script>
-var modal = document.getElementById("myModal");
-var btn = document.getElementById("btn1");
-var button = document.getElementsByClassName("submit");
-btn.onclick = function() {
-  modal.style.display = "block";
-}
+    <script>
+    $("[data-toggle=popover]").each(function(i, obj) {
 
-// When the user clicks on <span> (x), close the modal
-button.onclick = function() {
-  modal.style.display = "none";
-}
+        $(this).popover({
+        html: true,
+        content: function() {
+                var id = $(this).attr('id')
+                return $('#popover' + id).html();
+            }
+        });
 
-// When the user clicks anywhere outside of the modal, close it
-window.onclick = function(event) {
-  if (event.target == modal) {
-    modal.style.display = "none";
-  }
-}
-</script>
+    });
+    </script>
 </body>
 </html>                                                        
