--- a/sbs/sbs_server_side/home/static/home.css
+++ b/sbs/sbs_server_side/home/static/home.css
@@ -2,8 +2,7 @@ body{
     font-family: 'Varela Round', sans-serif;
     background-color: lavenderblush;
 }
-
-.modal-overlay {
+.modal {
     /*Hides pop-up when there is no "active" class*/
     visibility: hidden;
     position: absolute;
@@ -14,7 +13,7 @@ body{
     top: 2%;
     left: 25%;
   }
-  .modal-overlay.active {
+  .modal.active {
     /*displays pop-up when "active" class is present*/
     visibility: visible;
     position: absolute;
@@ -34,24 +33,21 @@ body{
   button {
     display: inline-block;
     vertical-align: middle;
-    color: #666666;
+    color:black;
     background: #ffffff;
-    border: 1px solid white;
+    border: 1px solid snow;
   }
   
   button:hover {
     border: 1px solid white;
-    background: #666666;
-    color: #ffffff;
+    background: lightskyblue;
+    color: black;
   }
 h2{
     text-align: center;
     color:indigo;
 }
-p{
-    text-align: center;
-    font-size: medium;
-}
+
 table{
     position: relative;
     margin-left: auto;
@@ -60,6 +56,7 @@ table{
 table,th,td{
     border-collapse: collapse;
     border: 1px solid black;
+    border-radius: 1%;
 }
 th,td {
     padding:5px;
@@ -85,7 +82,7 @@ th,td {
     padding-bottom: 12px;
     text-align: left;
     background-color: #4CAF50;
-    color: white;
+    color: black;
   }
 .form-control {
     box-shadow: none;
